# REPR

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  clslin.py  env.yaml  pyproject.toml
config/model/: part_vit.yaml
configs/: train.yaml
configs/callbacks/: default.yaml  ema.yaml  head_hook.yaml  lr_monitor.yaml  output_cache.yaml  plotting.yaml  training.yaml
configs/callbacks/classification_ft/: default.yaml
configs/callbacks/loggers/: head_hook_logger.yaml  metric_logger.yaml  reconstruction_logger.yaml  transform_logger.yaml
configs/callbacks/pretrain/: default.yaml
configs/data/: cifar10.yaml  im1k.yaml  imagenette.yaml
configs/data/transform/: basic.yaml  basic_224.yaml  cifar10.yaml  im1k_finetune.yaml
configs/debug/: default.yaml  overfit.yaml
configs/experiment/: hs_part_im1k_pairdiff_mlp.yaml  hs_part_im1k_pairdiff_mlp_A100.yaml  overfit_part_im1k_pairdiff_mlp.yaml  overfit_part_im1k_residual_mlp.yaml  overfit_partv3.yaml  part_cifar_cross_attn.yaml  part_cifar_pairwise_mlp.yaml  part_im1k_residual_mlp.yaml  part_vit_im1k.yaml  partmae_im1k.yaml  partmae_im1k_A100.yaml  partmae_im1k_A100_hs.yaml
configs/experiment/_deprecated/: overfit_part_im1k_pairdiff_mlp.yaml  (+5 more)
configs/extras/: default.yaml
configs/hparams_search/: default.yaml  im1k.yaml  im1k_A100.yaml  overfit_im1k.yaml
configs/logger/: wandb.yaml
configs/model/: part_mae.yaml  part_vit_cross_attn.yaml  part_vit_pairdiff_mlp.yaml  part_vit_pairwise_mlp.yaml  part_vit_residual_mlp.yaml
configs/optimizer/: deit_adamw.yaml
configs/scheduler/: deit_cosine_sched.yaml
configs/trainer/: gpu.yaml
fabric_configs/: droppos_pretrain.yaml  fabric_a100.yaml  pretrain.yaml
fabric_configs/data/: clevrtexv2_outd.yaml  coco.yaml  imagenette.yaml  in1k.yaml  in1k_snellius.yaml
fabric_configs/logger/: wandb.yaml
fabric_configs/optimizer/: adamw.yaml
fabric_configs/scheduler/: cosine.yaml
notebooks/playground/: 001_head_initialization.ipynb  002_memory_profile.ipynb  003_offline_eval.ipynb  005_hf_tuple_dict.ipynb  006_self_attention_analysis.ipynb  008_hook_attentions.ipynb  009_self_attention_analysis.ipynb  010_representation_analysis.ipynb  011_posmodels_checkpoints.ipynb  013_cropping_viz.ipynb  014_partmae.ipynb  015_memprofile_partmae.ipynb  016_load_partmae.ipynb  017_posembed.ipynb  020_attention_viz.ipynb  021_attention_visualization.ipynb  021_lr_finder.ipynb  022_partmae_imclass_forecast.ipynb  024_partmae_offgrid.ipynb  025_partmae_offgrid_init.ipynb  026_partmae_offgrid_eval.ipynb
playground/: main.py  sample.py  sample_batch.py  utils.py  vectorized_cifar.py  viz_utils.py
playground/notebooks/: 004_load_part_pretrained.ipynb  007_representation_analysis.ipynb  009_self_attention_analysis.ipynb  010_representation_analysis.ipynb  014_partmae.ipynb  020_attention_viz.ipynb  023_offgrid_posembed_test.py  024_partmae_offgrid.ipynb  026_partmae_offgrid_eval.ipynb  028_ptx.ipynb  029_overfit_partmae_v3.ipynb  030_overfit_partmae_v4.ipynb  031_training.ipynb  033_dist_aug.ipynb  034_plots.ipynb  035_v4_eval.ipynb  036_overfit_partmae_v5.ipynb  037_v5_eval.ipynb  038_v5_2_eval.ipynb  039_v6_eval.ipynb  040_simdino.ipynb  041_hummingbird_eval_colab.ipynb  043_memprof_v6.ipynb  044_v6_v2_eval.ipynb  uncertainty_visualization.py
playground/scripts/: 019_offgrid_rope.py  export_image_sizes.py  offgrid_rope.py  plot_image_sizes.py  rope_sincos.py  test_rope_equivalence.py  test_rope_equivalence_axial.py  val_sizes.csv
scripts/: attach_checkpoints.py  attention_viz.py  bundle.py  cleanup.py  export_backbone_hub.py  export_partmae_v5.py  latent_prox_map.py  lsruns  plot_attention_distance_analysis.py  plot_cls_token_affinities_batch.py  plot_cls_token_attention.py  plot_cls_token_attention_averaged.py  plot_eigenvalues_analysis.py  plot_fourier_analysis.py  plot_latent_prox_map.py  plot_latent_prox_map_by_pairs.py  plot_nmi_analysis.py  plot_singular_values_analysis.py  pose_uncertainty_map.py  run_hbird_eval.py  run_hummingbird.py  run_knn.py  spatial_prox_map.py  uncertainty_visualization.py
scripts/slurm/: eval_depth_nyuv2.sh  eval_hbird_ade20k.sh  eval_seg_ade20k.sh  eval_seg_voc.sh  evals.sh  finetune_det.sh  finetune_det2.sh  finetune_droppos_partmae.sh  finetune_droppos_partmae_offgrid.sh  finetune_segment.sh  install_conda.sh  pret_v6.sh  pret_v6_a100_noscale.sh  pret_v6_h100.sh  pret_v6_h100_nocls.sh  pret_v6_h100_nounk.sh  pt_v6.sh  pt_v6_h100.sh  train.sh  train_classification_ft.sh  train_partmae.sh  train_partmae_v2.sh  train_partmae_v4.sh  train_partmae_v5.sh  train_partmae_v5_2.sh  train_partmae_v6.sh  train_partmae_v6_h100.sh
src/: engine_finetune_det.py  engine_finetune_det2.py  engine_pretrain.py  main_finetune_det.py  main_finetune_det2.py  main_pretrain.py  train.py
src/callbacks/: __init__.py  base_callback.py  ema.py  reconstruction_logger.py
src/data/: hf_datamodule.py  im1k_datamodule.py  utils.py
src/experiments/: engine_hummingbird.py  engine_pretrain_droppos_fabric.py  main_pretrain_droppos_fabric.py
src/models/: image_classification_module.py  part_vit_module.py  part_vit_module_v3.py  partmae_module.py  partmae_v2_module.py
src/strategies/: compile.py  ddp_compile.py
src/utils/: __init__.py  checkpointer.py  conf_utils.py  fancy_indexing.py  io.py  misc.py  optimizer.py  rich_utils.py  timm_utils.py
tests/: test_benchmark_dataset.py  test_benchmark_dataset_imagenet.py  test_benchmark_sample.py  test_dino_converter.py  test_freeze_losses.py  test_loss.py  test_metric_logger.py  test_offgrid_sampling.py  test_pair_sampling.py  test_param_group_fn.py  test_patchembeds.py  test_reconstruction.py  test_v5_equivalence.py  test_v5_vs_v6.py  test_vicregl_converter.py  utils.py
tests/benchmarks/: conftest.py  memtracker.py  runner.py  test_cholesky.py  test_dataset_imagenet.py  test_drop_pos.py  test_gather_vs_iselect.py  test_interp_posembed.py  test_offgrid_patchembeds.py  test_offgrid_posembeds.py  test_patch_loss.py  test_patch_loss_dist.py  test_pose_loss.py  test_reconstruction_v6.py  test_stress_loss.py  test_v5_vs_v5_2.py
(+305 files in other folders)
