[tool.poetry]
name = "part"
version = "0.1.0"
description = ""
authors = ["Diego Canez <canezdiego@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
torch = {version = "2.7.0.dev20250122+cu126", allow-prereleases = true, source = "torch-cu126", platform = "linux"}
torchvision = {version = "0.22.0.dev20250122+cu126", allow-prereleases = true, source = "torch-cu126", platform = "linux"}
timm = "^1.0.11"
wandb = "^0.18.6"
matplotlib = "^3.9.2"
scikit-image = "^0.24.0"
jaxtyping = "^0.2.34"
lightning = "^2.4.0"
pytest-benchmark = "^5.1.0"
datasets = "^3.1.0"
omegaconf = "^2.3.0"
rootutils = "^1.0.7"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
hydra-optuna-sweeper = "^1.2.0"
rich = "^13.9.4"
tensorboardx = "^2.6.2.2"
tensorboard = "^2.18.0"
colorstamps = "^0.1.3"
aim = "^3.27.0"
plotly = "^5.24.1"
einops = "^0.8.0"
parameterized-transforms = {git = "https://github.com/dgcnz/parameterized-transforms"}
mediapy = "^1.2.2"
fvcore = "^0.1.5.post20221221"

[[tool.poetry.source]]
name = "torch-cu126"
url = "https://download.pytorch.org/whl/nightly/cu126"
priority = "explicit"


[[tool.poetry.source]]
name = "pypi-nvidia"
url = "https://pypi.nvidia.com"
priority = "explicit"



[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-benchmark = {git = "https://github.com/ionelmc/pytest-benchmark.git"}
tabulate = "^0.9.0"
jupyter = "^1.1.1"
dash = "^2.18.2"
pandas = "^2.2.3"
yacs = "^0.1.8"
scikit-learn = "^1.6.1"
vit-prisma = {git = "https://github.com/dgcnz/ViT-Prisma"}
pytorch-ignite = "^0.5.1"
torch-lr-finder = "^0.2.2"
onnxscript = "^0.2.0"
opencv-python = "^4.11.0.86"
typeguard = "^4.4.2"
marimo = "^0.11.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
