[project]
name = "part"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorstamps>=0.1.3",
    "datasets>=3.0.1",
    "einops>=0.8.1",
    "fvcore>=0.1.5.post20221221",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.3.0.dev0",
    "jaxtyping>=0.3.1",
    "lightning>=2.5.1",
    "matplotlib>=3.9.0",
    "mediapy>=1.2.2",
    "omegaconf>=2.3.0",
    "parameterized-transforms",
    "plotly>=6.1.0b0",
    "rich>=14.0.0",
    "rootutils>=1.0.7",
    "scikit-image>=0.25.2",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.2.2",
    "timm>=1.0.15",
    "torch==2.8.0.dev20250407",
    "torchvision==0.22.0.dev20250407",
    "wandb>=0.19.9",
]

[tool.uv]
prerelease = "allow"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
parameterized-transforms = { git = "https://github.com/dgcnz/parameterized-transforms" }

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "onnxscript>=0.3.0.dev20250409",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.11.4",
    "tabulate>=0.9.0",
    "torch-lr-finder>=0.2.2",
    "typeguard>=4.4.2",
]
